----------------------------------------------------------------------------------------------------------------------
Version:
Date:
    Features:
        - (SA) Process accessiblilty of captured spawners, which also fixes biter eggs and subsequent Gleba recipes.
        - (SA) Add support for the capture-spawner technology trigger.
----------------------------------------------------------------------------------------------------------------------
Version: 2.2.0
Date: November 6th 2024
    Features:
        - Add pseudo-items representing a recipe's total sushi-inputs and sushi-outputs.
          They can be toggled on/off in the LMB of the recipe.
        - Add the ability to select qualities for crafters, accumulators, modules, and beacons.
    Bugfixes:
        - Fixed counts are hidden on disabled recipes, since editing them won't work properly.
        - Accomodate modules as spoilage results.
----------------------------------------------------------------------------------------------------------------------
Version: 2.1.0
Date: October 29th 2024
    Features:
        - Focus the built count and fixed count edit boxes when first opening them.
        - Add a dark mode checkbox to the preferences.
    Bugfixes:
        - Recipes no longer have excessive question marks in their names
        - Moved mining and research bonuses have to the Preferences screen.
        - Support games without the Space Age DLC again.
    Internal changes:
        - Added rudimentary tools for drawing tab controls.
----------------------------------------------------------------------------------------------------------------------
Version: 2.0.1
Date: October 23rd 2024
    Bugfixes:
        - Yafc no longer crashes with enabling all feature flags for the Factorio Space Age DLC.
----------------------------------------------------------------------------------------------------------------------
Version: 2.0.0
Date: October 20th 2024
    Features: